# vrm-saas

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: README.md  architecture.md  contributing.md  data-architecture.md  database-schema.md  deployment.md  getting-started.md
docs/api/: README.md
python-backend/: README.md  main.py  mcp_servers.json  pyproject.toml  schemas.py  streaming_parser.py
python-backend/agent/: README.md  __init__.py  enhanced_mcp_client_agent.py  voice_based_interaction_agent.py
python-backend/app/: __init__.py  chat_history_manager.py  config.py  queues.py  server.py  vis_processor.py  webrtc.py
python-backend/app/routes/: __init__.py  chat.py
python-backend/prompts/: mcp_agent_prompt.txt  visualization_system_prompt.txt  voice_agent_system.txt
python-backend/utils/: thesys_prompts.py  utils.py
server/: README.md  package-lock.json  package.json
server/docs/: LOGGING_GUIDE.md
server/src/: index.js
src/: App.tsx
src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
src/hooks/: useBackendData.ts  useKnowledgeBases.ts  useMCPs.ts  useStreamMessages.ts  useSupabaseData.ts
src/lib/: api.ts  auth.ts  supabase.ts
src/pages/: AgentWizard.tsx  Agents.tsx  AuthPage.tsx  Calls.tsx  Dashboard.tsx  KnowledgeBase.tsx  LandingPage.tsx  MCPs.tsx  Settings.tsx  UploadSpecification.tsx
src/stores/: useAgentStore.ts  useAuthStore.ts  useUIStore.ts
src/utils/: api.ts
supabase/migrations/: 20250103000000_vrm_schema_redesign.sql  20250628111902_damp_limit.sql  (+2 more)
(+32 files in other folders)
